--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <img src="images/blog/blog-1.jpg" alt="" class="img-fluid">
           <div class="blog-text">
             <h6 class="author-name"><span>Activity</span>Lycean TVL Club</h6>
-            <a href="blog-single.html" class="h5 my-2 d-inline-block">
+            <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02fFUGtuySYcAFiN8Yxajc4S6hKdxAqTqXQ7MRZJHew2JKTomLiHKYmabBHHued6RZl&id=61556465753950" class="h5 my-2 d-inline-block">
               Grand Club Day
             </a>
             <p>We had welcomed a record-breaking number of new members! Their faces beamed with excitement, their eyes sparkling with the potential of what lay ahead.</p>
@@ -184,7 +184,7 @@
           <img src="images/blog/blog-2.jpg" alt="" class="img-fluid">
           <div class="blog-text">
             <h6 class="author-name"><span>Branding</span>Lycean TVL Club</h6>
-            <a href="blog-single.html" class="h5 my-2 d-inline-block">
+            <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid06iRvtEopgLhbgmEMb2KcjZia7cEBgTEZL6w6zDuoHxo2A6UQwhXi5LBqjjrLjXqel&id=61556465753950" class="h5 my-2 d-inline-block">
               Pandora Ring for sale!
             </a>
             <p>Selling a pandora ring for only 100 pesos.</p>
