--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <h1 class="banner-title"><yellow>T</yellow>echnical-<yellow>V</yellow>ocational-<yellow>L</yellow>ivelihood Club</h1>
               <p>A skills that is useful for livelihood and and technical studies and/or projects.</p>
 
-              <a href="contact.html" class="btn btn-white btn-circled">lets start</a>
+              <a href="about.html" class="btn btn-white btn-circled">lets start</a>
             </div>
           </div>
         </div>
