--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="about.html">About</a>
         </li>
-        <!--<li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link smoth-scroll" href="blog.html">Blog</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link smoth-scroll" href="contact.html">Contact</a>
         </li>-->
       </ul>
@@ -67,7 +67,7 @@
               <h1 class="banner-title"><yellow>T</yellow>echnical-<yellow>V</yellow>ocational-<yellow>L</yellow>ivelihood Club</h1>
               <p>A skills that is useful for livelihood and and technical studies and/or projects.</p>
 
-              <a href="about.html" class="btn btn-white btn-circled">lets start</a>
+              <a href="#about" class="btn btn-white btn-circled">lets start</a>
             </div>
           </div>
         </div>
@@ -165,29 +165,44 @@
         </div>
       </div>
     </div>
-
+    
     <div class="row">
+
       <div class="col-lg-4 col-sm-6 col-md-4">
         <div class="blog-block ">
-          <img src="images/blog/blog-1.jpg" alt="" class="img-fluid">
+          <img src="images/blog/blog-5.jpg" alt="" class="img-fluid">
           <div class="blog-text">
-            <h6 class="author-name"><span>Activity</span>Lycean TVL Club</h6>
-            <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02fFUGtuySYcAFiN8Yxajc4S6hKdxAqTqXQ7MRZJHew2JKTomLiHKYmabBHHued6RZl&id=61556465753950" class="h5 my-2 d-inline-block">
-              Grand Club Day
+            <h6 class="author-name"><span>Branding</span>Lycean TVL Club</h6>
+            <a target="_blank" href="https://www.facebook.com/permalink.php?story_fbid=pfbid02snhfrx2tEhiDBHuZMTvpeYKZngGNFAEdKwgNaaSm8zjAiNj8iXD5sPvyLthqozmal&id=61556465753950" class="h5 my-2 d-inline-block">
+              Cupid's Booth
             </a>
-            <p>We had welcomed a record-breaking number of new members! Their faces beamed with excitement, their eyes sparkling with the potential of what lay ahead.</p>
+            <p>thank you lycean for supporting one of a kind small businesses from the members of TVL Club...</p>
           </div>
         </div>
       </div>
+
       <div class="col-lg-4 col-sm-6 col-md-4">
         <div class="blog-block ">
-          <img src="images/blog/blog-2.jpg" alt="" class="img-fluid">
+          <img src="images/blog/blog-4.jpg" alt="" class="img-fluid">
           <div class="blog-text">
             <h6 class="author-name"><span>Branding</span>Lycean TVL Club</h6>
-            <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid06iRvtEopgLhbgmEMb2KcjZia7cEBgTEZL6w6zDuoHxo2A6UQwhXi5LBqjjrLjXqel&id=61556465753950" class="h5 my-2 d-inline-block">
-              Pandora Ring for sale!
+            <a target="_blank" href="https://www.facebook.com/permalink.php?story_fbid=pfbid02MTKuSjcYMz9bx7kBCSjdsaFMN4WNTeXeqJEELcyi3ncAhBPsS4YfVZ39YqAKS3Qql&id=61556465753950" class="h5 my-2 d-inline-block">
+              Graham PastiMallows
             </a>
-            <p>Selling a pandora ring for only 100 pesos.</p>
+            <p>Wanna bite? Giving it to your crush or loved ones?...</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-sm-6 col-md-4">
+        <div class="blog-block ">
+          <img src="images/blog/blog-3.jpg" alt="" class="img-fluid">
+          <div class="blog-text">
+            <h6 class="author-name"><span>Branding</span>Lycean TVL Club</h6>
+            <a target="_blank" href="https://www.facebook.com/permalink.php?story_fbid=pfbid02zhwUHYvs4kB7GRBCm2KTNFh5qFJSynbj9AHtN4DdbGSJwaRz1toV5gjfQ1CDTh3Pl&id=61556465753950" class="h5 my-2 d-inline-block">
+              Flowers and Letter Keychains!
+            </a>
+            <p>selling a crochet flowers and also a letter keychain, if you want to give it to your loved ones or to your crush...</p>
           </div>
         </div>
       </div>
@@ -253,4 +268,3 @@
 
   </body>
   </html>
-   
